--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-  <div class="container-xl mt-5">
+  <div class="container-xl">
 
     <!-- Modal (green) -->
     <div class="modal fade" id="positive" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -40,47 +39,72 @@
       </div>
     </div>
 
-    <section id="story1" class="m-5 p-5 inline-block">
-      <div class="align-middle">
-        <h1 class="text">The invasion of Afghanistan was justified in the name of women's rights. In her radio address in   November 2001, just weeks after the invasion began and in place of the weekly radio address Laura Bush (first lady) condemned
-        </h1>
-        <h1 class="my-5"><em>"The brutal oppression of women, a central goal of the terrorists. Fight against terrorism is also a fight for the rights and dignity of women."</em></h1>
-        <h3 class="text-secondary">While the US were busy reducing sexual assault in Afghanistan, they also <a href="#" id="for-story-1" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">tried</a> to reduce sexual assaults in their own military. But it <a href="#" id="for-story-1" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">didn't</a> always work.</h3>
-      </div>
-    </section>
-    
-    <section id="story2" class="m-5 p-5">
-      <h1>Following multiple federal lawsuits, the Marine Corps has an initiative to integrate women into every occupation specialty.</h1>
-      <h3 class="text-secondary">But there was still <a href="#" id="for-story-2" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">resistence</a>. Although, for women like Beth and Amelia, breaking down barriers to woman in combat eventually happened, albeit in an <a href="#" id="for-story-2" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">unexpected way.</a></h3>
-    </section>
-
-    <section id="story3" class="m-5 p-5">
-      <h1>The paper explores military medicine as an area where alleged gains in gender equality actually reveal persistent gender stereotypes and gender inequalities. Although active military and veteran healthcare has <a href="#" id="for-story-3" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">expanded</a> to provide gynecological and gender-specific healthcare, staffing shortages, lack of capacity and safety issues for patients remain <a href="#" id="for-story-3" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">barriers</a> to <a href="#" id="for-story-4" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">gender equality</a> in military and veteran medicine.</h1>
-    </section>
-
-    <section id="story4" class="m-5 p-5">
-      <h1>Department of Defense hired RAND National Defense Research Institute to conduct an independent assessment of sexual assault, sexual harassment, and gender discrimination to improve DoD's reporting measures and procedures regarding sexual assault</h1>
-      <h3 class="text-secondary">Although the investigation was an <a href="#" id="for-story-5" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">effort</a> to stir the department, their results were <a href="#" id="for-story-5" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">not something</a> that DoD expected.</h3>
+    <section class="story" id="story1">
+        <p>
+          <span class="war">
+            In 2006, Laura Bush said that America was going to Afghanistan to fight "the brutal oppression of women".
+          </span>
+          While we were busy reducing sexual assaults in Afghanistan,
+          we also
+          <a href="#" id="for-story-1" class="text-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">
+            tried
+          </a> 
+          to reduce sexual assaults in our own military, 
+          even if it
+          <a href="#" id="for-story-1" class="text-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">
+            didn't
+          </a> 
+          succeed at the start.
+        </p>
     </section>
 
-    <section id="story5" class="m-5 p-5">
-      <figure>
-        <blockquote class="blockquote">
-          <h2 class="fst-italic">A broken culture is the root of the sexual harassment and sexual assault policy failures over the past two decades.</h2>
-        </blockquote>
-        <figcaption class="blockquote-footer"><cite title="Source Title">As one NCO told the IRC during a listening session</cite></figcaption>
-      </figure>
+    <section class="story" id="story2">
+      <p>
+        <span class="war">
+          We won some major victories against the Taliban, and even established democracy in Afghanistan. It's women thanked us for helping them feel safe. 
+        </span>
+        Our own women were playing a greater role within the armed forces, and 
+        we
+        <a href="#" id="for-story-1" class="text-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">
+          tried again
+        </a> 
+        to reduce sexual assaults in our own military. 
+        But, it 
+        <a href="#" id="for-story-1" class="text-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">
+          still didn't
+        </a> 
+        seem to work.
+      </p>
     </section>
 
-    <section id="story6" class="m-5 p-5">
-      <h1>Something something something that summarises the text for the stories of rape and murder.</h1>
-      <h3 class="text-secondary">something something negative <a href="#" id="for-story-6" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">story</a> and another something something rape murder <a href="#" id="for-story-7" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">another story</a> something something and then <a href="#" id="for-story-8" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">one more</a>.</h3>
+    <section class="story" id="story3">
+      <p>
+        <span class="war">
+          We struggled to keep the peace, and Afghanistan slowly descended into chaos. As assaults against Afghan women continued to rise,
+        </span>
+        we 
+        <a href="#" id="for-story-1" class="text-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">
+          kept pretending
+        </a> 
+        to stymie sexual assaults in our own military. 
+        But, clearly, we 
+        <a href="#" id="for-story-1" class="text-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">
+          weren't doing enough
+        </a> 
+        for women, whether in Afghanistan or in our armed forces.
+      </p>
+    </section>
+
+    <section class="story" id="story4">
+      <p>
+        Can we help women elsewhere in the world if we don't pay attention to our own?
+      </p>
     </section>
 
     <div>
       <nav class="navbar sticky-bottom bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"></a>
+          <a class="navbar-brand" href="#">View Timeline</a>
           <a class="navbar-brand" href="#">Read Full Paper</a>
         </div>
       </nav>
