--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <span class="war">
             In 2006, Laura Bush said that America was going to Afghanistan to fight "the brutal oppression of women".
           </span>
-          While we were busy reducing sexual assaults in Afghanistan,
+          While we were busy fighting sexual oppression (among other things) in Afghanistan,
           we also
           <a href="#" id="for-story-1" class="text-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">
             tried
@@ -61,7 +61,7 @@
     <section class="story" id="story2">
       <p>
         <span class="war">
-          We won some major victories against the Taliban, and even established democracy in Afghanistan. It's women thanked us for helping them feel safe. 
+          We won some major victories against the Taliban, and even established democracy in Afghanistan. Its women thanked us for helping them feel safe. 
         </span>
         Our own women were playing a greater role within the armed forces, and 
         we
