--- a/index.html
+++ b/index.html
@@ -82,6 +82,16 @@
   </div>
 
 
+  <!-- dialogs -->
+  <div class="dialog-wrapper">
+    <header>Draggable Div</header>
+    <div class="content">
+      <div class="icon"><i class='bx bx-move'></i></div>
+      <div class="title">Draggable Div</div>
+      <p>This is a draggable div which is created using HTML CSS & JavaScript. You can move this div anywhere on the document or page.</p>
+    </div>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
 </body>
