--- a/index.html
+++ b/index.html
@@ -10,67 +10,33 @@
 
 <body>
 
-  <!-- DRAGGABLE DIV: https://codepen.io/kaizer1v/pen/OJYQdye -->
-
-  <!-- TODO: can add radio disturbance before & after the clip -->
-  <audio id="my_audio" src="./trimmed_laura_bush_brown_uni.mp3" type="audio/mpeg"></audio>
-
-  <!-- Modal (green) -->
-  <div class="modal fade" id="positive" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="fs-1 btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body bg-success-subtle modal-story-positive p-4">
-          <!-- filled on demand -->
-        </div>
+  <div class="content-container">
+    <section class="section-content" id="story1">
+      <div class="align-middle">
+        <h1 class="fw-bolder fade-show">In 2006, Laura Bush said that America was going to Afghanistan to fight</h1>
+        <h1 class="my-5 fade-show"><em> "the brutal oppression of women"</em></h1>
+        <h3 class="text-secondary lh-lg fade-show">While we were busy fighting sexual oppression (among other things) in Afghanistan, we also<a href="#" id="for-story-1" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">tried</a> to reduce sexual assaults in our own military, even if it <a href="#" id="for-story-1" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">didn't</a> succeed at the start.</h3>
       </div>
-    </div>
-  </div>
-
-  <!-- Modal (red) -->
-  <div class="modal fade" id="negative" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="fs-1 btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body bg-danger-subtle modal-story-negative p-4">
-          <!-- filled on demand -->
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="container-xl px-5 pt-5">
-    <section>
-      <article id="story1" class="m-5 p-5 inline-block">
-        <div class="align-middle">
-          <h1 class="fw-bolder fade-show">In 2006, Laura Bush said that America was going to Afghanistan to fight</h1>
-          <h1 class="my-5 fade-show"><em> "the brutal oppression of women"</em></h1>
-          <h3 class="text-secondary lh-lg fade-show">While we were busy fighting sexual oppression (among other things) in Afghanistan, we also<a href="#" id="for-story-1" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">tried</a> to reduce sexual assaults in our own military, even if it <a href="#" id="for-story-1" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">didn't</a> succeed at the start.</h3>
-        </div>
-      </article>
-      
-      <article id="story2" class="m-5 p-5">
-        <h1 class="fw-bolder">We won some major victories against the Taliban, and even established democracy in Afghanistan. Its women thanked us for helping them feel safe.</h1>
-        <h3 class="text-secondary lh-lg">Our own women were playing a greater role within the armed forces, and we <a href="#" id="for-story-2" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">tried again</a>to reduce sexual assaults in our own military. But it <a href="#" id="for-story-2" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">still didn't</a> seem to work</h3>
-      </article>
-
-      <article id="story3" class="m-5 p-5">
-        <h1 class="fw-bolder">We struggled to keep the peace, and Afghanistan slowly descended into chaos. As assaults against Afghan women continued to rise, </h1>
-        <h3 class="text-secondary lh-lg">we<a href="#" id="for-story-3" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">kept pretending</a> to stymie sexual assaults in our own military. But, clearly, we <a href="#" id="for-story-3" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">weren't doing enough</a> tofor women, whether in Afghanistan or in our armed forces.</h3>
-      </article>
-
-      <article id="story4" class="m-5 p-5">
-        <h1>Can we help women elsewhere in the world if we don't pay attention to our own?</h1>
-        <div class="container-fluid mx-auto">
-          <h4 class="navbar-brand" href="#">View Timeline</h4>
-          <h4 class="navbar-brand" href="#">Read Full Paper</h4>
-        </div>
-      </article>
     </section>
+    
+    <section class="section-content" id="story2">
+      <h1 class="fw-bolder">We won some major victories against the Taliban, and even established democracy in Afghanistan. Its women thanked us for helping them feel safe.</h1>
+      <h3 class="text-secondary lh-lg">Our own women were playing a greater role within the armed forces, and we <a href="#" id="for-story-2" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">tried again</a>to reduce sexual assaults in our own military. But it <a href="#" id="for-story-2" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">still didn't</a> seem to work</h3>
+    </section>
+
+    <section class="section-content" id="story3">
+      <h1 class="fw-bolder">We struggled to keep the peace, and Afghanistan slowly descended into chaos. As assaults against Afghan women continued to rise, </h1>
+      <h3 class="text-secondary lh-lg">we<a href="#" id="for-story-3" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">kept pretending</a> to stymie sexual assaults in our own military. But, clearly, we <a href="#" id="for-story-3" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">weren't doing enough</a> tofor women, whether in Afghanistan or in our armed forces.</h3>
+    </section>
+
+    <section class="section-content" id="story4">
+      <h1>Can we help women elsewhere in the world if we don't pay attention to our own?</h1>
+      <div class="container-fluid mx-auto">
+        <h4 class="navbar-brand" href="#">View Timeline</h4>
+        <h4 class="navbar-brand" href="#">Read Full Paper</h4>
+      </div>
+    </section>
+  </div>
     <!-- <div>
       <nav class="navbar sticky-bottom bg-body-tertiary">
         <div class="container-fluid">
@@ -79,12 +45,19 @@
         </div>
       </nav>
     </div> -->
-  </div>
-
 
   <!-- dialogs -->
-  <div class="dialog-wrapper">
+  <div id="dialog-story1" class="dialog-wrapper">
     <header>Draggable Div</header>
+    <div class="content">
+      <div class="icon"><i class='bx bx-move'></i></div>
+      <div class="title">Draggable Div</div>
+      <p>This is a draggable div which is created using HTML CSS & JavaScript. You can move this div anywhere on the document or page.</p>
+    </div>
+  </div>
+
+  <div id="dialog-story2" class="dialog-wrapper">
+    <header>Draggable Div 2</header>
     <div class="content">
       <div class="icon"><i class='bx bx-move'></i></div>
       <div class="title">Draggable Div</div>
