section content centered

--- a/index.html
+++ b/index.html
@@ -10,30 +10,37 @@
 
 <body>
 
-  <div class="content-container">
-    <section class="section-content" id="story1">
-      <div class="align-middle">
+  <div class="sections">
+
+    <section id="story1">
+      <div class="section-content align-middle">
         <h1 class="fw-bolder fade-show">In 2006, Laura Bush said that America was going to Afghanistan to fight</h1>
         <h1 class="my-5 fade-show"><em> "the brutal oppression of women"</em></h1>
         <h3 class="text-secondary lh-lg fade-show">While we were busy fighting sexual oppression (among other things) in Afghanistan, we also<a href="#" id="for-story-1" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">tried</a> to reduce sexual assaults in our own military, even if it <a href="#" id="for-story-1" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">didn't</a> succeed at the start.</h3>
       </div>
     </section>
     
-    <section class="section-content" id="story2">
-      <h1 class="fw-bolder">We won some major victories against the Taliban, and even established democracy in Afghanistan. Its women thanked us for helping them feel safe.</h1>
-      <h3 class="text-secondary lh-lg">Our own women were playing a greater role within the armed forces, and we <a href="#" id="for-story-2" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">tried again</a>to reduce sexual assaults in our own military. But it <a href="#" id="for-story-2" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">still didn't</a> seem to work</h3>
+    <section id="story2">
+      <div class="section-content align-middle">
+        <h1 class="fw-bolder">We won some major victories against the Taliban, and even established democracy in Afghanistan. Its women thanked us for helping them feel safe.</h1>
+        <h3 class="text-secondary lh-lg">Our own women were playing a greater role within the armed forces, and we <a href="#" id="for-story-2" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">tried again</a>to reduce sexual assaults in our own military. But it <a href="#" id="for-story-2" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">still didn't</a> seem to work</h3>
+      </div>
     </section>
 
-    <section class="section-content" id="story3">
-      <h1 class="fw-bolder">We struggled to keep the peace, and Afghanistan slowly descended into chaos. As assaults against Afghan women continued to rise, </h1>
-      <h3 class="text-secondary lh-lg">we<a href="#" id="for-story-3" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">kept pretending</a> to stymie sexual assaults in our own military. But, clearly, we <a href="#" id="for-story-3" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">weren't doing enough</a> tofor women, whether in Afghanistan or in our armed forces.</h3>
+    <section id="story3">
+      <div class="section-content align-middle">
+        <h1 class="fw-bolder">We struggled to keep the peace, and Afghanistan slowly descended into chaos. As assaults against Afghan women continued to rise, </h1>
+        <h3 class="text-secondary lh-lg">we<a href="#" id="for-story-3" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">kept pretending</a> to stymie sexual assaults in our own military. But, clearly, we <a href="#" id="for-story-3" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">weren't doing enough</a> tofor women, whether in Afghanistan or in our armed forces.</h3>
+      </div>
     </section>
 
-    <section class="section-content" id="story4">
-      <h1>Can we help women elsewhere in the world if we don't pay attention to our own?</h1>
-      <div class="container-fluid mx-auto">
-        <h4 class="navbar-brand" href="#">View Timeline</h4>
-        <h4 class="navbar-brand" href="#">Read Full Paper</h4>
+    <section id="story4">
+      <div class="section-content align-middle">
+        <h1>Can we help women elsewhere in the world if we don't pay attention to our own?</h1>
+        <div class="container-fluid mx-auto">
+          <h4 class="navbar-brand" href="#">View Timeline</h4>
+          <h4 class="navbar-brand" href="#">Read Full Paper</h4>
+        </div>
       </div>
     </section>
   </div>
