reveal animation to be changed.. but there for now

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div class="sections">
 
-    <section id="story1">
+    <section id="story1" class="invisible">
       <div class="section-content align-middle">
         <h1 class="fw-bolder fade-show">In 2006, Laura Bush said that America was going to Afghanistan to fight</h1>
         <h1 class="my-5 fade-show"><em> "the brutal oppression of women"</em></h1>
@@ -44,18 +44,10 @@
       </div>
     </section>
   </div>
-    <!-- <div>
-      <nav class="navbar sticky-bottom bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">View Timeline</a>
-          <a class="navbar-brand" href="#">Read Full Paper</a>
-        </div>
-      </nav>
-    </div> -->
 
   <!-- dialogs -->
-  <div id="dialog-story1" class="dialog-wrapper">
-    <header>Draggable Div</header>
+  <div id="dialog-story1" class="invisible dialog-wrapper">
+    <header>Story 1</header>
     <div class="content">
       <div class="icon"><i class='bx bx-move'></i></div>
       <div class="title">Draggable Div</div>
@@ -63,7 +55,7 @@
     </div>
   </div>
 
-  <div id="dialog-story2" class="dialog-wrapper">
+  <div id="dialog-story2" class="invisible dialog-wrapper">
     <header>Draggable Div 2</header>
     <div class="content">
       <div class="icon"><i class='bx bx-move'></i></div>
