--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@
 
   <div class="sections">
 
-    <section id="story1" class="invisible">
-      <div class="section-content align-middle">
+    <section id="story0">
+      <div class="section-content align-middle invisible">
         <h1 class="fw-bolder fade-show">In 2006, Laura Bush said that America was going to Afghanistan to fight</h1>
         <h1 class="my-5 fade-show"><em> "the brutal oppression of women"</em></h1>
         <h3 class="text-secondary lh-lg fade-show">While we were busy fighting sexual oppression (among other things) in Afghanistan, we also<a href="#" id="for-story-1" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">tried</a> to reduce sexual assaults in our own military, even if it <a href="#" id="for-story-1" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">didn't</a> succeed at the start.</h3>
       </div>
     </section>
     
-    <section id="story2">
-      <div class="section-content align-middle">
+    <section id="story1">
+      <div class="section-content align-middle invisible">
         <h1 class="fw-bolder">We won some major victories against the Taliban, and even established democracy in Afghanistan. Its women thanked us for helping them feel safe.</h1>
         <h3 class="text-secondary lh-lg">Our own women were playing a greater role within the armed forces, and we <a href="#" id="for-story-2" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">tried again</a>to reduce sexual assaults in our own military. But it <a href="#" id="for-story-2" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">still didn't</a> seem to work</h3>
       </div>
     </section>
 
-    <section id="story3">
-      <div class="section-content align-middle">
+    <section id="story2">
+      <div class="section-content align-middle invisible">
         <h1 class="fw-bolder">We struggled to keep the peace, and Afghanistan slowly descended into chaos. As assaults against Afghan women continued to rise, </h1>
         <h3 class="text-secondary lh-lg">we<a href="#" id="for-story-3" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">kept pretending</a> to stymie sexual assaults in our own military. But, clearly, we <a href="#" id="for-story-3" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">weren't doing enough</a> tofor women, whether in Afghanistan or in our armed forces.</h3>
       </div>
     </section>
 
-    <section id="story4">
-      <div class="section-content align-middle">
+    <section id="story3">
+      <div class="section-content align-middle invisible">
         <h1>Can we help women elsewhere in the world if we don't pay attention to our own?</h1>
         <div class="container-fluid mx-auto">
           <h4 class="navbar-brand" href="#">View Timeline</h4>
@@ -46,8 +46,8 @@
   </div>
 
   <!-- dialogs -->
-  <div id="dialog-story1" class="invisible dialog-wrapper">
-    <header>Story 1</header>
+  <div id="dialog-story0" class="dialog-wrapper">
+    <header>Story 0</header>
     <div class="content">
       <div class="icon"><i class='bx bx-move'></i></div>
       <div class="title">Draggable Div</div>
@@ -55,8 +55,35 @@
     </div>
   </div>
 
-  <div id="dialog-story2" class="invisible dialog-wrapper">
+  <div id="dialog-story1" class="invisible dialog-wrapper">
     <header>Draggable Div 2</header>
+    <div class="content">
+      <div class="icon"><i class='bx bx-move'></i></div>
+      <div class="title">Draggable Div</div>
+      <p>This is a draggable div which is created using HTML CSS & JavaScript. You can move this div anywhere on the document or page.</p>
+    </div>
+  </div>
+  
+  <div id="dialog-story2" class="invisible dialog-wrapper">
+    <header>Another story (2)</header>
+    <div class="content">
+      <div class="icon"><i class='bx bx-move'></i></div>
+      <div class="title">Draggable Div</div>
+      <p>This is a draggable div which is created using HTML CSS & JavaScript. You can move this div anywhere on the document or page.</p>
+    </div>
+  </div>
+
+  <div id="dialog-story3" class="invisible dialog-wrapper">
+    <header>Third story</header>
+    <div class="content">
+      <div class="icon"><i class='bx bx-move'></i></div>
+      <div class="title">Draggable Div</div>
+      <p>This is a draggable div which is created using HTML CSS & JavaScript. You can move this div anywhere on the document or page.</p>
+    </div>
+  </div>
+
+  <div id="dialog-story4" class="invisible dialog-wrapper">
+    <header>One more four</header>
     <div class="content">
       <div class="icon"><i class='bx bx-move'></i></div>
       <div class="title">Draggable Div</div>
